# InstagramAPI

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: compile.yml
include/: Instagram.h  Network.h  NetworkInterface.h
include/types/: LoginRequest.h  UserCommentsRequest.h  UserFeedRequest.h  UserListRequest.h  UserListRequestFollow.h  UserRequest.h
src/: Instagram.cpp  Network.cpp
