cmake_minimum_required (VERSION 3.8)
project("InstagramAPI")
find_package(cpr CONFIG REQUIRED)
find_package(jsoncpp CONFIG REQUIRED)
add_executable (Instagram "main.cpp" "include/Instagram.h" "src/Instagram.cpp" "include/Network.h" "src/Network.cpp")
if(MSVC)
	target_link_libraries(Instagram PRIVATE jsoncpp_lib jsoncpp_object cpr)
endif(MSVC)
if(UNIX)
	target_link_libraries(Instagram PRIVATE jsoncpp cpr)
endif(UNIX)
