cmake_minimum_required (VERSION 3.8)
project("InstagramAPI")
include("/home/deni/vcpkg/scripts/buildsystems/vcpkg.cmake")
find_package(cpr CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
add_executable (Instagram "main.cpp" "include/Instagram.h" "src/Instagram.cpp" "include/Network.h" "src/Network.cpp" "include/NetworkInterface.h" "include/types/UserRequest.h" "include/types/UserListRequest.h" "include/types/UserListRequestFollow.h" "include/types/UserFeedRequest.h" "include/types/UserCommentsRequest.h")
if(MSVC)
	target_link_libraries(Instagram PRIVATE nlohmann_json::nlohmann_json cpr)
endif(MSVC)
if(UNIX)
	target_link_libraries(Instagram PRIVATE nlohmann_json::nlohmann_json cpr)
endif(UNIX)
